# sanger-qc-blast

./: .gitignore  AMBIGUOUS_CALLING.md  CHANGELOG.md  CHECKLIST.md  DEVELOPER_GUIDE.md  FILES.md  FINAL_SUMMARY.txt  GET_STARTED.txt  INSTALL.md  LICENSE  PLOTS_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  example_usage.py  pyproject.toml  run_examples.sh  verify_algorithms.py  view_plots.py
sanger_qc_trim/: __init__.py  ambiguous_calling.py  cli.py  io_utils.py  plots.py  qc.py  trim.py  writers.py
seq_data/: HE9_ITS4.ab1  HE9_ITS4.phd.1  HE9_ITS4.txt  Y19_ITS4.ab1  Y19_ITS4.phd.1  Y19_ITS4.txt
tests/: __init__.py  conftest.py  test_ambiguous_calling.py  test_qc.py  test_trim.py
